
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IPPROTO_TCP ;
 int IP_H ;
 int TCP_H ;
 int build_ip (int,int ,int ,int ,int,int ,int ,int ,int ,int ,char*) ;
 int build_tcp (int ,int ,int,unsigned int,int,int,int ,int ,int ,char*) ;
 int do_checksum (char*,int ,int) ;
 int packid ;
 int sock ;
 int spoofed ;
 int spoofed_port ;
 int target ;
 int target_port ;
 int usleep (int) ;
 int write_ip (int ,char*,int) ;

void
  probe (unsigned int ack)
{
    char buf[200];
    usleep (10000);
    build_tcp (spoofed_port, target_port, 2, ack, 16, 32000, 0, 0, 0, buf + IP_H);
    build_ip (TCP_H, 0, packid++, 0, 64, IPPROTO_TCP, spoofed,
              target, 0, 0, buf);
    do_checksum (buf, IPPROTO_TCP, TCP_H);
    write_ip (sock, buf, IP_H + TCP_H);
}
