; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19458.c_probe.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19458.c_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@spoofed_port = common dso_local global i32 0, align 4
@target_port = common dso_local global i32 0, align 4
@IP_H = common dso_local global i32 0, align 4
@TCP_H = common dso_local global i32 0, align 4
@packid = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@spoofed = common dso_local global i32 0, align 4
@target = common dso_local global i32 0, align 4
@sock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [200 x i8], align 16
  store i32 %0, i32* %2, align 4
  %4 = call i32 @usleep(i32 10000)
  %5 = load i32, i32* @spoofed_port, align 4
  %6 = load i32, i32* @target_port, align 4
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds [200 x i8], [200 x i8]* %3, i64 0, i64 0
  %9 = load i32, i32* @IP_H, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i8, i8* %8, i64 %10
  %12 = call i32 @build_tcp(i32 %5, i32 %6, i32 2, i32 %7, i32 16, i32 32000, i32 0, i32 0, i32 0, i8* %11)
  %13 = load i32, i32* @TCP_H, align 4
  %14 = load i32, i32* @packid, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @packid, align 4
  %16 = load i32, i32* @IPPROTO_TCP, align 4
  %17 = load i32, i32* @spoofed, align 4
  %18 = load i32, i32* @target, align 4
  %19 = getelementptr inbounds [200 x i8], [200 x i8]* %3, i64 0, i64 0
  %20 = call i32 @build_ip(i32 %13, i32 0, i32 %14, i32 0, i32 64, i32 %16, i32 %17, i32 %18, i32 0, i32 0, i8* %19)
  %21 = getelementptr inbounds [200 x i8], [200 x i8]* %3, i64 0, i64 0
  %22 = load i32, i32* @IPPROTO_TCP, align 4
  %23 = load i32, i32* @TCP_H, align 4
  %24 = call i32 @do_checksum(i8* %21, i32 %22, i32 %23)
  %25 = load i32, i32* @sock, align 4
  %26 = getelementptr inbounds [200 x i8], [200 x i8]* %3, i64 0, i64 0
  %27 = load i32, i32* @IP_H, align 4
  %28 = load i32, i32* @TCP_H, align 4
  %29 = add nsw i32 %27, %28
  %30 = call i32 @write_ip(i32 %25, i8* %26, i32 %29)
  ret void
}

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @build_tcp(i32, i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @build_ip(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @do_checksum(i8*, i32, i32) #1

declare dso_local i32 @write_ip(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
